No optional dependencies for ng-cli

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,5 @@
 dependencies:
   pre:
-    - npm install -g angular-cli
+    - npm install -g angular-cli --no-optional
   override:
     - npm install --no-optional
