--- a/circle.yml
+++ b/circle.yml
@@ -15,6 +15,4 @@ deployment:
     branch: master
     commands:
       - npm run build
-      - scp -r . serverpilot@159.203.42.60:~/apps/ng-test/public
-        pwd:
-          dist
+      - scp -r dist/. $STAGING_USER@$STAGING_HOST:$STAGING_APP_DIR
